--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,6 +24,10 @@
   padding: 0 var(--ifm-pre-padding);
 }
 
+.a {
+  text-decoration: none;
+}
+
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
